--- a/JiaoBaoYun-hb/html/quan/tab-zone.html
+++ b/JiaoBaoYun-hb/html/quan/tab-zone.html
@@ -15,29 +15,7 @@
 		<!--公用事件js文件-->
 		<script type="text/javascript" src="../../js/utils/events.js"></script>
 		<script type="text/javascript" src="../../js/publicProtocol.js"></script>
-				<!--本地存储-->
-		<!--<script src="../js/libs/myStorage/myStorage.js" type="text/javascript" charset="utf-8"></script>
-		<script src="../js/storageKeyName.js" type="text/javascript" charset="utf-8"></script>-->
-		<!--加密-->
-		<!--<script src="../js/libs/RSA/Barrett.js" type="text/javascript" charset="utf-8"></script>
 
-		<script src="../js/libs/RSA/BigInt.js" type="text/javascript" charset="utf-8"></script>
-		<script src="../js/libs/RSA/RSA.js" type="text/javascript" charset="utf-8"></script>
-		<script src="../js/utils/RSAEncrypt.js" type="text/javascript" charset="utf-8"></script>-->
-		<!---->
-		<!--网络请求-->
-		<!--<script src="../js/utils/postData.js" type="text/javascript" charset="utf-8"></script>-->
-		<!--签名-->
-		<!--<script src="../js/libs/crypto-js/require.js"></script>
-		<script src="../js/utils/sortSign.js" type="text/javascript" charset="utf-8"></script>
-		<script src="../js/utils/signHmacSHA1.js" type="text/javascript" charset="utf-8"></script>
-		<script src="../js/libs/jquery.js" type="text/javascript" charset="utf-8"></script>-->
-
-
-
-		<!--本地存储-->
-		<!--<script src="../js/libs/myStorage/myStorage.js" type="text/javascript" charset="utf-8"></script>
-		<script src="../js/storageKeyName.js" type="text/javascript" charset="utf-8"></script>-->
 		<!--侧滑-->
 		<script src="../../js/main/slide_navigation.js">
 		</script>
@@ -59,6 +37,7 @@
 				color: black;
 				/*中间竖线颜色*/
 				border-left: 1px solid gray;
+
 			}
 			/*选择的item样式*/
 			
@@ -119,7 +98,7 @@
 
 				<!--标题栏-->
 				<h4>
-					<img  src="../../image/tab_zone/u131.png" />
+					<img style="height: 30px;"  src="../../image/tab_zone/u127.png" / >
 					<span  class="parent">家长圈</span>
 					<!--<hr class="vertical-line" />-->
 					<div style="padding: 10px 10px 10px 100px;margin-top: -45px;">
@@ -144,9 +123,9 @@
 							<li class="mui-table-view-cell mui-media parent-cell1">
 
 								<img class="mui-media-object mui-pull-left" src="../../image/tab_zone/u72.png" />
-								<span style="float: left;"><img src="../../image/tab_zone/u85.png" class="red-point" /></span>
+								<span style="float: left;" ><span  class="mui-badge mui-badge-danger custom-badge1">3</span></span>
 								<p class="time">10月19</p>
-								<div class="mui-media-body" ;>
+								<div class="mui-media-body" style="padding-left: 5px;";>
 									张雨欣
 									<p class='mui-ellipsis'>期末成绩出来了，热烈庆祝我们排全校第二<img src="../../image/tab_zone/u91.png"></p>
 								</div>
@@ -155,9 +134,9 @@
 							<li class="mui-table-view-cell mui-media parent-cell1">
 
 								<img class="mui-media-object mui-pull-left" src="../../image/tab_zone/u34.png">
-								<span style="float: left;"><img src="../../image/tab_zone/u85.png" class="red-point" /></span>
+								<span style="float: left;"><span  class="mui-badge mui-badge-danger custom-badge1">3</span></span>
 								<p class="time">10月18</p>
-								<div class="mui-media-body">
+								<div class="mui-media-body" style="padding-left: 5px;">
 									李芸
 									<p class='mui-ellipsis'>在今天的全校演讲比赛中，我班有6名同学获奖...</p>
 								</div>
@@ -166,9 +145,9 @@
 							<li class="mui-table-view-cell mui-media parent-cell1">
 
 								<img class="mui-media-object mui-pull-left" src="../../image/tab_zone/u72.png" />
-								<span style="float: left;"><img src="../../image/tab_zone/u85.png" class="red-point" /></span>
+								<span style="float: left;"><span  class="mui-badge mui-badge-danger custom-badge1">3</span></span>
 								<p class="time">10月19</p>
-								<div class="mui-media-body" ;>
+								<div class="mui-media-body" style="padding-left: 5px;" ;>
 									张雨欣
 									<p class='mui-ellipsis'>期末成绩出来了，热烈庆祝我们排全校第二<img src="../../image/tab_zone/u91.png"></p>
 								</div>
@@ -178,7 +157,7 @@
 
 								<img class="mui-media-object mui-pull-left" src="../../image/tab_zone/u34.png">
 								<p class="time">10月18</p>
-								<div class="mui-media-body">
+								<div class="mui-media-body" style="padding-left: 5px;">
 									李芸
 									<p class='mui-ellipsis'>在今天的全校演讲比赛中，我班有6名同学获奖...</p>
 								</div>
@@ -191,9 +170,9 @@
 							<li class="mui-table-view-cell mui-media parent-cell2">
 
 								<img class="mui-media-object mui-pull-left" src="../../image/tab_zone/u72.png" />
-								<span style="float: left;"><img src="../../image/tab_zone/u85.png" class="red-point" /></span>
+								<span style="float: left;"><span  class="mui-badge mui-badge-danger custom-badge1">3</span></span>
 								<p class="time">10月20</p>
-								<div class="mui-media-body" ;>
+								<div class="mui-media-body" style="padding-left: 5px;";>
 									李丽
 									<p class='mui-ellipsis'>期末成绩出来了，热烈庆祝我们排全校第二<img src="../image/tab_zone/u91.png"></p>
 								</div>
@@ -203,7 +182,7 @@
 
 								<img class="mui-media-object mui-pull-left" src="../../image/tab_zone/u34.png">
 								<p class="time">10月18</p>
-								<div class="mui-media-body">
+								<div class="mui-media-body" style="padding-left: 5px;">
 									张曦曦
 									<p class='mui-ellipsis'>在今天的全校演讲比赛中，我班有6名同学获奖...</p>
 								</div>
@@ -213,7 +192,7 @@
 
 								<img class="mui-media-object mui-pull-left" src="../../image/tab_zone/u72.png" />
 								<p class="time">10月19</p>
-								<div class="mui-media-body" ;>
+								<div class="mui-media-body" style="padding-left: 5px;";>
 									刘若曦
 									<p class='mui-ellipsis'>期末成绩出来了，热烈庆祝我们排全校第二<img src="../../image/tab_zone/u91.png"></p>
 								</div>
@@ -223,7 +202,7 @@
 
 								<img class="mui-media-object mui-pull-left" src="../../image/tab_zone/u34.png">
 								<p class="time">10月18</p>
-								<div class="mui-media-body">
+								<div class="mui-media-body" style="padding-left: 5px;">
 									安琪
 									<p class='mui-ellipsis'>在今天的全校演讲比赛中，我班有6名同学获奖...</p>
 								</div>
