--- a/JiaoBaoYun-hb/html/tab-zone.html
+++ b/JiaoBaoYun-hb/html/tab-zone.html
@@ -206,7 +206,7 @@
 				</div>
 			</div>
 		</div>
-
+		<script src="../js/publicProtocol.js"></script>
 		<script>
 			mui.init({
 				pullRefresh: {
@@ -220,6 +220,9 @@
 					}
 				}
 			});
+				
+	
+
 
 			function pulldownRefresh() {
 				setTimeout(function() {
@@ -358,5 +361,6 @@
 			}
 		}
 	</script>
+
 
 </html>
