--- a/JiaoBaoYun-hb/html/cloud/cloud_home.html
+++ b/JiaoBaoYun-hb/html/cloud/cloud_home.html
@@ -364,7 +364,7 @@
 						case "2": //充值
 							break;
 						case "3": //作业批改
-						events.openNewWindow('../homework/homework-stu.html')
+						events.openNewWindow('../homework/homework-tea.html')
 							break;
 					}
 				});
