--- a/JiaoBaoYun-hb/html/register/modify_password.html
+++ b/JiaoBaoYun-hb/html/register/modify_password.html
@@ -10,7 +10,7 @@
 
 	<body>
 		<header class="mui-bar mui-bar-nav">
-			<a class="mui-action-back mui-icon mui-icon-left-nav mui-pull-left"></a>
+			<a class="mui-icon mui-icon-right-nav mui-pull-right" id="cancelBtn" style="font-size: 18px;">取消</a>
 			<h1 class="mui-title">修改密码</h1>
 		</header>
 		<div class="mui-content">
@@ -120,13 +120,17 @@
 									return;
 								} else {
 									mui.toast('修改密码成功')
+									events.openNewWindowWithData('../../html/index.html','');
 								}
 							});
 						} else {
 							mui.toast(data.RspTxt);
 						}
 					});
-
+				});
+				//取消按钮
+				events.addTap('cancelBtn', function() {
+					events.openNewWindowWithData('../../html/index.html','');
 				});
 			});
 		</script>
