--- a/JiaoBaoYun-hb/html/register/yanZhengMa.html
+++ b/JiaoBaoYun-hb/html/register/yanZhengMa.html
@@ -113,7 +113,8 @@
 									window.myStorage.setItem(window.storageKeyName.PERSONALINFO, data.RspData);
 									//跳转到主界面
 									var temp;
-									events.openNewWindowWithData('../../html/index.html', temp);
+//									events.openNewWindowWithData('../../html/index.html', temp);
+									events.openNewWindowWithData('modify_password.html', temp);
 								});
 							} else { //验证码模式登录1
 								console.log('yanzhengma denglu');
@@ -130,7 +131,8 @@
 										window.myStorage.setItem(window.storageKeyName.PERSONALINFO, data.RspData);
 										//跳转到主界面
 										var temp;
-										events.openNewWindowWithData('../../html/index.html', temp);
+//										events.openNewWindowWithData('../../html/index.html', temp);
+										events.openNewWindowWithData('modify_password.html', temp);
 									}
 
 								});
