--- a/JiaoBaoYun-hb/html/index.html
+++ b/JiaoBaoYun-hb/html/index.html
@@ -48,7 +48,7 @@
 	<script>
 		mui.init();
 		mui.plusReady(function() {
-			slideNavigation.add('index-menu.html', 200)
+			slideNavigation.add('mine.html', 200)
 		})
 	</script>
 
