--- a/JiaoBaoYun-hb/html/mine.html
+++ b/JiaoBaoYun-hb/html/mine.html
@@ -35,30 +35,42 @@
 		<div class="mui-content">
 			
 			<div class="title" style="margin-bottom: 25px; text-align: center;">
-				<img src="../image/slide_navigation/img3.jpg" class="head-portrait"/><br />
-				<h4>孟婆</h4>
-				<sub>初中|语文老师</sub>
+				<img id="uimg" src="../image/slide_navigation/img3.jpg" class="head-portrait"/><br />
+				<h4 id="uname">姓名</h4>
+				<sub id="utext">暂无信息</sub>
 			</div>
 			<ul class="mui-table-view mui-table-view-chevron mui-table-view-inverted" style="color: #ddd;">
 				<li class="mui-table-view-cell">
 					<a class="mui-navigate-right" open-type="common" href="examples/pullrefresh_main.html">
-						<span class="mui-icon iconfont icon-liaotian app-icon"></span>
-						应用
+						<span class="mui-icon iconfont icon-qun app-icon"></span>
+						群列表
 					</a>
 				</li>
 				<li class="mui-table-view-cell">
 					<a class="mui-navigate-right" open-type="common" href="examples/offcanvas-drag-left.html">
-						<span class="mui-icon iconfont icon-xie record-icon"></span>
-						录入班级学生资料
+						<span class="mui-icon iconfont icon-ruqun record-icon"></span>
+						申请加入群
 					</a>
 				</li>
 				<li class="mui-table-view-cell">
 					<a class="mui-navigate-right" href="examples/switches.html">
-						<span class="mui-icon iconfont icon-shezhi set-icon"></span>
-						设置
+						<span class="mui-icon iconfont icon-xinxiaoxi set-icon"></span>
+						新消息
 					</a>
 				</li>
 			
+				<li class="mui-table-view-cell">
+					<a class="mui-navigate-right" href="examples/tab-with-viewpagerindicator.html">
+						<span class="mui-icon iconfont icon-kongjian about-icon"></span>
+						空间
+					</a>
+				</li>
+				<li class="mui-table-view-cell">
+					<a class="mui-navigate-right" href="examples/tab-with-viewpagerindicator.html">
+						<span class="mui-icon iconfont icon-shezhi about-icon"></span>
+						设置
+					</a>
+				</li>
 				<li class="mui-table-view-cell">
 					<a class="mui-navigate-right" href="examples/tab-with-viewpagerindicator.html">
 						<span class="mui-icon iconfont icon-about about-icon"></span>
@@ -68,6 +80,9 @@
 			</ul>
 		</div>
 		<script src="../js/mui.min.js"></script>
+		<script src="../js/libs/myStorage/myStorage.js"></script>
+		<script src="../js/storageKeyName.js"></script>
+		<script src="../js/utils/events.js"></script>
 		<script type="text/javascript" charset="utf-8">
 			mui.init({
 				keyEventBind: {
@@ -77,9 +92,42 @@
 			});
 			//获得侧滑主窗口webview对象
 			var main = null;
+			var personalInfo=null;
 			mui.plusReady(function () {
 				main = plus.webview.currentWebview().opener();
+				//获取个人信息
+				personalInfo=window.myStorage.getItem(window.storageKeyName.PERSONALINFO);
+				console.log(JSON.stringify(personalInfo))
+				//展示个人信息
+				setInfo(personalInfo)
+				events.addTap('title',function(){
+					events.openNewWindowWithData('',personalInfo)
+				})
 			})
+			/**
+			 * @param {Object} info
+			 * "utid":"3",
+			 * "token":"Pc7Grc0gP7SacraGNpYpdDMrI9w=",
+			 * "uid":"18906444490","uname":
+			 * "testA0000055B6AE73",
+			 * "unick":"",
+			 * "usex":"0",
+			 * "utxt":"",
+			 * "uimg":""}
+			 */
+			function setInfo(info){
+				if(info.uimg){
+					document.getElementById('uimg').src=info.uimg;
+				}
+				if(info.uname){
+					document.getElementById('uname').innerText=info.uname;
+				}
+				if(info.utext){
+					document.getElementById('utext').innerText=info.utext;
+				}
+				
+			}
+			
 			function closeMenu () {
 				mui.fire(main,"menu:close");
 			}
