--- a/JiaoBaoYun-hb/html/quan/tab-zone.html
+++ b/JiaoBaoYun-hb/html/quan/tab-zone.html
@@ -15,9 +15,15 @@
 		<!--公用事件js文件-->
 		<script type="text/javascript" src="../../js/utils/events.js"></script>
 		<script type="text/javascript" src="../../js/publicProtocol.js"></script>
+		<script type="text/javascript" src="../../js/libs/myStorage/myStorage.js"></script>
+		<script type="text/javascript" src="../../js/storageKeyName.js"></script>
+		
 
 		<!--侧滑-->
 		<script src="../../js/main/slide_navigation.js">
+		</script>
+		<script>
+			var datasource;
 		</script>
 		<style type="text/css">
 			/*自定义系统segmentcontrol控件*/
@@ -25,7 +31,7 @@
 			
 			.mui-segmented-control {
 				font-size: 14px;
-				width: 65%;
+				width: 100%;
 				border: 0px solid gray;
 				background-color: transparent;
 			}
@@ -97,27 +103,27 @@
 				</ul>
 
 				<!--标题栏-->
-				<h4>
+				<h4 >
 					<img style="height: 30px;"  src="../../image/tab_zone/u127.png" / >
 					<span  class="parent">家长圈</span>
 					<!--<hr class="vertical-line" />-->
-					<div style="padding: 10px 10px 10px 100px;margin-top: -45px;">
+					<div style="padding: 10px 10px 10px 100px;margin-top: -35px;">
 
 				<div id="segmentedControl" class="mui-segmented-control mui-segmented-control-primary">
 
-					<a class="mui-control-item mui-active" href="#item1">
+					<!--<a class="mui-control-item mui-active" href="#item1">
 				1001班<span class="mui-badge mui-badge-danger custom-badge1"  >3</span>
 			</a>
 					<a class="mui-control-item" href="#item2">
 				1002班<span class="mui-badge mui-badge-danger custom-badge1"  >1</span>
-			</a>
+			</a>-->
 
 				</div>
 			</div>
 				</h4>
 				<!--第二个列表-->
-				<div style="margin-top: -10px;">
-					<div id="item1" class="mui-control-content mui-active">
+				<div id="userList" style="margin-top: 0px;">
+					<!--<div id="item1" class="mui-control-content mui-active">
 
 						<ul class="mui-table-view parent-table1">
 							<li class="mui-table-view-cell mui-media parent-cell1">
@@ -208,7 +214,7 @@
 								</div>
 
 						</ul>
-					</div>
+					</div>-->
 				</div>
 			</div>
 		</div>
