--- a/JiaoBaoYun-hb/html/quan/zonep_sub.html
+++ b/JiaoBaoYun-hb/html/quan/zonep_sub.html
@@ -11,9 +11,7 @@
 		<link rel="stylesheet" href="../../css/utils/common.css" />
 		<script src="../../js/mui.min.js"></script>
 		<script type="text/javascript" src="../../js/quan/dynamiclistitem.js"></script>
-		<script type="text/javascript" src="../../js/testPro.js"></script>
-		<script type="text/javascript" src="../../js/publicModel.js"></script>
-		<script type="text/javascript" src="../../js/storageKeyName.js"></script>
+		<script type="text/javascript" src="../../js/publicProtocol.js"></script>
 		<style>
 			.mui-table-view {
 				background: transparent;
@@ -265,6 +263,27 @@
 		}
 		var id = 0;
 		mui.plusReady(function() {
+				//获取个人信息
+//	var personalUTID = window.myStorage.getItem(window.storageKeyName.PERSONALINFO).utid;
+//	console.log(personalUTID)
+////所需参数
+//		var comData = {
+//			userId: personalUTID,//用户ID
+//			publisherId:'1',//发布用户ID
+//			pageIndex:'0',//当前页数
+//			pageSize:'10'//每页记录数
+//		};
+//	// 等待的对话框
+//	var wd = plus.nativeUI.showWaiting(storageKeyName.WAITING);
+//	postDataPro_getNoReadUserSpacesByUserForPublisher(comData, wd, function(data) {
+//		wd.close();
+//		console.log('postDataPro_PostGList:RspCode:' + data.RspCode + ',RspData:' + JSON.stringify(data.RspData) + ',RspTxt:' + data.RspTxt);
+//		if(data.RspCode == 0) {
+//			
+//		}else{
+//			mui.toast(data.RspTxt);
+//		}
+//		});
 
 			var table = document.body.querySelector('.mui-table-view');
 			var data = addData();
