增加创建群界面

--- a/JiaoBaoYun-hb/html/cloud/cloud_home.html
+++ b/JiaoBaoYun-hb/html/cloud/cloud_home.html
@@ -347,7 +347,8 @@
 							events.openNewWindow('record_student_main.html');
 							break;
 						case "1": //学习轨迹
-							events.openNewWindow('record_learningpath_main.html');
+							//events.openNewWindow('record_learningpath_main.html');
+							events.openNewWindow('../itsme/qun_create.html');
 							break;
 					}
 				});
