--- a/JiaoBaoYun-hb/html/mine/qun_manage.html
+++ b/JiaoBaoYun-hb/html/mine/qun_manage.html
@@ -22,7 +22,9 @@
 		<header class="mui-bar mui-bar-nav">
 			<a class="mui-action-back mui-icon mui-icon-left-nav mui-pull-left"></a>
 			<h1 class="mui-title">群</h1>
-			<a class="mui-icon mui-pull-right"><font style="font-size: 17px;">邀请</font></a>
+			<a id="invite" class="mui-icon mui-pull-right">
+				<font style="font-size: 17px;">邀请</font>
+			</a>
 		</header>
 		<div class="mui-content">
 			<span class="mui-icon mui-icon-plus">新增群按钮</span>
@@ -31,8 +33,11 @@
 			mui.init();
 			mui.plusReady(function() {
 				document.body.querySelector('.mui-icon-plus').addEventListener('tap', function() {
-					events.openNewWindow('qun_create_writeinfo.html');
+					events.openNewWindow('qun_manage_info.html');
 				});
+				document.getElementById('invite').addEventListener('tap', function() {
+					events.openNewWindow('qun_manage_invite.html');
+				})
 			})
 		</script>
 	</body>
